# loki

./: .gitignore  Makefile  Makefile.in  MakefileRecovery  README.md  config.mk  config.site  configure  configure.ac  configure~  tmp_env_settings.sh
control/: setup.py
control/loki/: adapter.py  controllertest.py  register_controller.py
control/lokiadapter/: loki-adapter.py
design/: .gitignore  Makefile  Makefile.in  _create_linux_setup.sh  _create_win_setup.cmd  _readme.txt  design_basic_settings.sh  design_basic_settings.sh.in  vivado_create_project_guimode.sh  vivado_open_existing_project_guimode.sh
design/block_design/: zusys_bd.tcl
design/board_files/: TE0803_board_files.csv  TE080x_board_files.csv
design/board_files/TE0803_2CG_1E/.svn/: wc.db
design/board_files/TE0803_2EG_1E/.svn/: wc.db
design/board_files/TE0803_3CG_1E/.svn/: wc.db
design/board_files/TE0803_3EG_1E/.svn/: wc.db
design/board_files/TE0803_4CG_1E/.svn/: wc.db
design/board_files/TE0803_4EG_1E/.svn/: wc.db
design/board_files/TE0803_4EG_1I/.svn/: wc.db
design/board_files/TE0803_4EG_2E/.svn/: wc.db
design/board_files/TE0803_4EV_1E/.svn/: wc.db
design/board_files/TE0803_5EV_1E/.svn/: wc.db
design/board_files/TE0803_5EV_1I/.svn/: wc.db
design/board_files/TE0808_15EG_1E/3.0/: board.xml
design/board_files/TE0808_15EG_1E/4.0/: board.xml
design/board_files/TE0808_9EG_1E/4.0/: board.xml
design/board_files/TE0808_9EG_2I/3.0/: board.xml
design/carrier_support/loki_1_0/block_design/: zusys_bd.tcl
design/carrier_support/loki_1_0/constraints/: 7ev_1e_4gb
design/carrier_support/tebf0808/block_design/: zusys_bd.tcl
design/carrier_support/tebf0808/constraints/: 15eg_1e_4gb  4cg_2gb  _i_bitgen.xdc  create_symlinks.awk
design/carrier_support/tebf0808/prebuilt/hardware/: .gitignore
design/carrier_support/tebf0808/sw_lib/: 5ev_2gb  7cg_1i_4gb  9eg_1i_8gb  create_symlinks.awk
design/console/.svn/: wc.db
design/console/base_cmd/: design_basic_settings.cmd  design_clear_design_folders.cmd  design_run_project_batchmode.cmd  program_flash.cmd  sdk_create_prebuilt_project_guimode.cmd  vivado_create_project_guimode.cmd
design/console/base_sh/: vivado_create_project_guimode.sh
design/constraints/: _i_io.xdc
design/constraints/te0808_generic/: _e_carrier_te0808.xdc
design/ip_lib/SC0808BF/.svn/: wc.db
design/ip_lib/axis_live_audio_1.0/.svn/: wc.db
design/ip_lib/rgpio/.svn/: wc.db
design/misc/Si5338/: RegisterMap.txt  Si5338-RevB-Project.slabtimeproj  register_map.h
design/os/petalinux/: .gitignore
design/os/petalinux-custom/: .gitignore  Makefile  autobuild.sh
design/os/petalinux-custom/.petalinux/: metadata
design/os/petalinux/.petalinux/: usage_statistics
design/scripts/: script_designs.tcl  script_external.tcl  script_hsi.tcl  script_loki_buildhw.tcl  script_loki_buildsw.tcl  script_loki_export_bd_tcl.tcl  script_main.tcl  script_sdsoc.tcl  script_settings.tcl  script_usrcommands.tcl  script_vitis.tcl
design/scripts/.svn/: wc.db
design/settings/: design_settings.tcl  zip_ignore_list.csv
design/sw_lib/: apps_list.csv
design/workspace/: sdk_info.txt
design/workspace/sdk/: .analytics
design/workspace/sdk/.metadata/: version.ini
design/workspace/sdk/TE0803-03-4AE11-A/: .project  platform.spr
docs/source/: conf.py  index.rst
loki-recovery/: .gitignore  machine.env  repo.env
os/petalinux-custom/: .gitignore  Makefile.in
os/petalinux-custom/project-spec/configs/: config  config.in  plnx_syshw_data  plnxtool.conf  rootfs_config  zynqmp-generic-xczu4cg.conf
prebuilt/: fsbl.elf  pmufw.elf
share/: config.site
(+304 files in other folders)
