AC_INIT(loki, 1.0)

AC_SUBST(platform_module_shortname, [4cg_2gb])
AC_SUBST(os_path, [./os/petalinux-custom])
AC_SUBST(platform_carrier, [tebf0808])
AC_SUBST(blockdesign_override_dir)
AC_SUBST(yocto_user_layer_0)
AC_SUBST(yocto_tmpdir, [/tmp/loki])

AC_CONFIG_FILES([
 Makefile
 design/Makefile
 design/design_basic_settings.sh
 os/petalinux-custom/Makefile
 os/petalinux-custom/project-spec/configs/config
 ])

AC_OUTPUT
